fix: adjust spacings inside .filters__form

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -506,7 +506,10 @@ body {
 
 .filters__form {
   display: flex;
+  flex-wrap: wrap;
   align-items: flex-start;
+  justify-content: space-between;
+  gap: 70px;
 }
 
 .filters__fieldset {
@@ -517,17 +520,10 @@ body {
   border: none;
 }
 
-.filters__fieldset:nth-of-type(1) {
-  margin-right: 68px;
-}
-
-.filters__fieldset:nth-of-type(2) {
-  margin-right: 140px;
-}
-
 .filters__fieldset:nth-of-type(3) {
   width: 288px;
   flex-basis: 288px;
+  margin-left: auto;
 }
 
 .filters__legend {
@@ -595,9 +591,8 @@ body {
 
 .filters__button-group {
   width: 191px;
-  margin-left: auto;
   padding-top: 56px;
-  text-align: center;
+  text-align: right;
 }
 
 .filters__button:first-child {
